--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <title>Rainao Lawn Moving</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <!-- AOS CSS for scroll animations -->
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <style>
     body { font-family: 'Inter', sans-serif; }
     .mobile-menu-button span {
@@ -33,7 +31,13 @@
       }
       .mobile-nav.active { display: flex; }
     }
-    /* Calendly panel styling */
+    .service-card {
+      min-height: 370px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+    }
     .calendly-inline-widget {
       min-width: 320px;
       height: 700px;
@@ -74,41 +78,41 @@
   </header>
 
   <!-- Hero -->
-  <section id="home" class="pt-32 pb-20 flex flex-col items-center text-center bg-white" data-aos="fade-up">
+  <section id="home" class="pt-32 pb-20 flex flex-col items-center text-center bg-white">
     <h1 class="text-4xl md:text-5xl font-extrabold mb-4 leading-tight tracking-tight">Beautiful Lawns, Easy Appointments</h1>
     <p class="text-lg md:text-xl text-gray-600 mb-8 max-w-xl">Rainao Lawn Moving keeps your lawn at its best—affordable, reliable, and always professional in East Orlando.</p>
     <a href="#appointment" class="inline-block bg-green-600 text-white px-8 py-3 rounded-full font-semibold shadow hover:bg-green-700 transition">Book Now</a>
   </section>
 
   <!-- Services -->
-  <section id="services" class="py-20 bg-gray-50" data-aos="fade-up">
+  <section id="services" class="py-20 bg-gray-50">
     <div class="max-w-3xl mx-auto px-6">
       <h2 class="text-2xl font-bold text-center mb-10 tracking-tight">Our Specialized Services</h2>
       <div class="grid gap-8 md:grid-cols-2">
-        <div class="bg-white rounded-xl shadow p-6 flex flex-col items-center" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-card bg-white rounded-xl shadow p-6">
           <img src="https://placehold.co/300x180/dcfce7/16a34a?text=Lawn+Mowing" alt="Lawn Mowing" class="mb-4 rounded-lg w-full object-cover"/>
-          <h3 class="font-semibold text-green-700 text-lg mb-2">Expert Lawn Mowing</h3>
-          <p class="text-gray-600 text-center">Clean, even cuts every time. Healthy grass, happy yard.</p>
+          <h3 class="text-green-700 text-lg mb-2 font-normal">Expert Lawn Mowing</h3>
+          <p class="text-gray-600 text-center font-normal">Clean, even cuts every time. Healthy grass, happy yard.</p>
         </div>
-        <div class="bg-white rounded-xl shadow p-6 flex flex-col items-center" data-aos="fade-up" data-aos-delay="200">
+        <div class="service-card bg-white rounded-xl shadow p-6">
           <img src="https://placehold.co/300x180/dcfce7/16a34a?text=Edging" alt="Edging" class="mb-4 rounded-lg w-full object-cover"/>
-          <h3 class="font-semibold text-green-700 text-lg mb-2">Precision Edging</h3>
-          <p class="text-gray-600 text-center">Crisp lines for garden beds, walkways, and driveways.</p>
+          <h3 class="text-green-700 text-lg mb-2 font-normal">Precision Edging</h3>
+          <p class="text-gray-600 text-center font-normal">Crisp lines for garden beds, walkways, and driveways.</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Testimonials -->
-  <section id="testimonials" class="py-20 bg-white" data-aos="fade-up">
+  <section id="testimonials" class="py-20 bg-white">
     <div class="max-w-3xl mx-auto px-6">
       <h2 class="text-2xl font-bold text-center mb-10 tracking-tight">What Our Clients Say</h2>
       <div class="space-y-8">
-        <blockquote class="border-l-4 border-green-600 pl-4 italic text-gray-700" data-aos="fade-up" data-aos-delay="100">
+        <blockquote class="border-l-4 border-green-600 pl-4 italic text-gray-700">
           "EJ and the Rainao Lawn Moving team transformed my patchy lawn into a lush green paradise! Their service in East Orlando is top-notch."
           <div class="mt-2 text-green-700 font-semibold">– Jane Doe</div>
         </blockquote>
-        <blockquote class="border-l-4 border-green-600 pl-4 italic text-gray-700" data-aos="fade-up" data-aos-delay="200">
+        <blockquote class="border-l-4 border-green-600 pl-4 italic text-gray-700">
           "Absolutely fantastic service! My lawn has never looked better. Highly recommend Rainao Lawn Moving."
           <div class="mt-2 text-green-700 font-semibold">– John Smith</div>
         </blockquote>
@@ -117,17 +121,21 @@
   </section>
 
   <!-- Appointment (Calendly panel embedded) -->
-  <section id="appointment" class="py-20 bg-gray-50" data-aos="fade-up">
+  <section id="appointment" class="py-20 bg-gray-50">
     <div class="max-w-3xl mx-auto px-6 text-center">
       <h2 class="text-2xl font-bold mb-6 tracking-tight">Book Your Appointment</h2>
       <p class="mb-8 text-gray-600">Easy online scheduling for mowing or edging. Just pick your time below!</p>
-      <div class="calendly-inline-widget" data-url="https://calendly.com/pantojaefrain1127/lawn-moving-appoinment"></div>
+      <!-- Calendly inline widget begin -->
+      <div class="calendly-inline-widget"
+        data-url="https://calendly.com/pantojaefrain1127/lawn-moving-appoinment?hide_event_type_details=1&hide_gdpr_banner=1"
+        style="min-width:320px;height:700px;"></div>
+      <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+      <!-- Calendly inline widget end -->
     </div>
-    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="py-20 bg-white" data-aos="fade-up">
+  <section id="contact" class="py-20 bg-white">
     <div class="max-w-2xl mx-auto px-6">
       <h2 class="text-2xl font-bold text-center mb-8 tracking-tight">Contact</h2>
       <div class="flex flex-col md:flex-row md:space-x-8">
@@ -153,15 +161,7 @@
     &copy; 2025 Rainao Lawn Moving, EJ Pantoja. All rights reserved.
   </footer>
 
-  <!-- AOS JS for scroll animations -->
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>
-    AOS.init({
-      duration: 800,
-      once: true,
-      easing: 'ease-in-out',
-    });
-
     // Mobile menu toggle
     document.getElementById('mobile-menu-button').addEventListener('click', function() {
       document.getElementById('mobile-nav').classList.toggle('active');
@@ -175,3 +175,4 @@
   </script>
 </body>
 </html>
+
